Added summary of Thomas 1998. Also new plot of how correlations vary as tradeoff in PACKER is increased. Also neatened up some directories (still much work here to be done, though.)

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ design-sheet.html
 # python
 __pycache__/
 *.py[cod]
+*.pyc
 *$py.class
 
 #latex
@@ -28,7 +29,7 @@ Modules/tests/
 Manuscripts/cog-psych/review_materials/
 
 private/
-
+Archive/
 *~
 
 
