Refreshed repository from time machine backup because I messed up a commit.

--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,13 @@ latex_out/
 *.toc
 *.fdb_latexmk
 *.synctex.gz
+*.gz
 
 
 Modules/tests/
 Manuscripts/cog-psych/review_materials/
 
+chtc_code/
 private/
 Archive/
 *~
